# ClockBot

./: .editorconfig  .envrc  .gitignore  LICENSE  Pipfile  README.md  TERMS_OF_SERVICE.md  TODO.md  TODO.txt  clockbot.py  clockbot.py.old  default.yml  exact.txt  improvised.py  install.sh  main.py  memo.txt  mypy.ini  pyproject.toml  requirements.txt  run.bat  run.cmd  run.sh  start.bat
.github/: dependabot.yml
.github/workflows/: python.yml
assets/txt/: quote.txt
clockbot/: __init__.py  bot.py  check.py  cog.py  converter.py  core.py  etc.py
clockbot/help/: __init__.py  embedhelp.py  embedmenu.py  texthelp.py
cogs/: babel.py  babel_legacy.py  bamboo.py  chat.py  clock.py  game.py  info.py  meme.py  mention.py  misc.py  owner.py  pranks.py  rtfm.py  tools.py  voice.py
cogs/aprilfools/: 2021_namechat.py  2023_namechat.py
cogs/legacy/: .ruff.toml  babel.py  bamboo.py  info.py  misc.py  owner.py  pranks.py  rtfm.py
deadcode/: README.md
deadcode/clockbot/: cog.py  converter.py  core.py
deadcode/cogs/: babel.py  bamboo.py  clock.py  game.py  info.py  mention.py  misc.py  owner.py  pranks.py  rtfm.py  tools.py  voice.py
deadcode/cogs/aprilfools/: 2021_namechat.py  2022_nyanchat.py  2023_namechat.py
deadcode/help/: embedhelp.py  embedmenu.py  texthelp.py
deadcode/utils/: chatfilter.py  db.py  drawclock.py  mdformat.py
deadcode/utils/KoreanNumber/: .gitignore  README.md  kr2num.py  num2kr.py  test_kr2num.py
example/: ex_basicbot.py  ex_bot.py  ex_client.py
lib/: MemberFilter.py  mdformat.py  num2korean.py
lib/KoreanNumber/: .gitrepo  kr2num.py  test_num2kr.py
modules/: korean2num.py  lazy.py  num2korean.py
settings/: .gitignore  .gitkeep
src/: 1_chat.py  2_misc.py  main.py  run.py
utils/: MemberFilter.py  chatfilter.py  db.py  drawclock.py  help.py  mdformat.py
utils/KoreanNumber/: kr2num.py  num2kr.py  test_kr2num.py  test_num2kr.py
utils/help/: __init__.py  embedhelp.py  kustom.py
