[project]
name = "ClockBot"
version = "0.0.0"
authors = [{ name = "WieeRd", email = "verywieerd@gmail.com" }]
requires-python = ">=3.11"
dependencies = [] # specified in `Pipfile`


[tool.ruff]
output-format = "grouped"

# FIX: rewrite and bring back legacy cogs written in dpy v1.7
extend-exclude = ["cogs/legacy", "cogs/aprilfools"]

[tool.ruff.lint]
# NOTE: exclude rules enforced by `ruff format`
extend-select = [
    "C90", # mccabe
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "PGH003", "PGH004", # pygrep-hooks

    # rules from flake8
    "ANN001", "ANN2", # annotations
    "BLE", # blind-except
    "FBT", # boolean-trap
    "B", # bugbear
    "A", # builtin
    "COM818", "COM819", # commas
    "C4", # comprehensions
    "ISC", # implicit-str-concat
    "G", # logging-format
    "INP", # no-pep420
    "PIE", # pie
    "RET", # return
    "SIM", # simplify
    "TCH", # type-checking
]

# F403: checks for wildcard imports (`from module import *`)
# excuse: I will always be using * with modules with `__all__`
per-file-ignores = { "__init__.py" = ["F403"] }

[tool.ruff.format]
preview = true


[tool.pyright]
include = ["main.py"] # imported modules are automatically included
ignore = ["cogs/legacy", "cogs/aprilfools"]
# strict = []
